[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Level/Entities/Walker.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 50 )

[node name="Walker" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
color = Color( 0.905882, 0.270588, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BottomLeftRay" type="RayCast2D" parent="."]
position = Vector2( -52, 50 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="BottomRightRay" type="RayCast2D" parent="."]
position = Vector2( 52, 50 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="LeftRay" type="RayCast2D" parent="."]
position = Vector2( -50, 0 )
enabled = true
cast_to = Vector2( -5, 0 )

[node name="RightRay" type="RayCast2D" parent="."]
position = Vector2( 50, 0 )
enabled = true
cast_to = Vector2( 5, 0 )
